--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "OTT stream server",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "npm install && npx tsc",
+    "start": "node ./dist/server/src/index.js"
   },
   "author": "Rishabh Singh",
   "license": "ISC",
@@ -17,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "stripe": "^15.12.0"
+    "stripe": "^15.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
